--- a/main.html
+++ b/main.html
@@ -8,7 +8,102 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<style>
+		header{
+color: blue;
+		}
+		#nav-actor{
+			color: rgb(224, 20, 30);
+			
+			border:2px solid black ;
+		}
+		#nav-quote{
+			color: rgb(180, 17, 230);
+			border:2px solid blue ;
+		}
+		#summary1{
+			color: brown;
+		}
+		#actor{
+			color:darkgreen;
+			border: 3px double black;
+		}
+		#quote{
+			color:yellowgreen;
+			border: 3px double black;
+		}
+		#aside1{
+			color:grey;
+			border: 2px solid black;
+		}
+
+
+	</style>
+	<header>
+
+		<h1 >Raajakumara</h1>
+	</header>
+	<nav id="nav-actor">
+		<b>Main heros </b>
+<li>Punnet RAjkumara </li>
+<li>Priya Anand</li>
+<li>Anand nag</li>
+<li>Prakash raj</li>
+	</nav>
+	<br>
+
+	<nav id="nav-quote">
+		<b>famous quotes </b>
+<li>
+u keep yours parents happy the god will keep u happy</li>
+	</nav>
+
+
+	<summary id="summary1">
+		<a>A dutiful son, a prince in his fathers' eyes, retains his purity of character despite the many challenges thrown his way.</a>
+	</summary>
+
+	<section id="actor">
+		<li>Punnet Rajakumar</li>
+			<li>Priya Anand</li> 
+			<li>Ananth Nag </li>
+			<li>Sarath Kumar</li> 
+			<li>Prakash Raj</li>
+			<li>Chikkanna </li>
+			<li>Sadhu Kokila </li>
+			<li>Achyuth Kumar </li>
+			<li>Honnavalli Krishna</li> 
+			<li>Bhargavi Narayan </li>
+			<li>Chitra Shenoy </li>
+			<li>Anil</li>
+			<li>Vijayalakshmi Singh</li> 
+			<li>Rangayana Raghu</li>
+			
+	</section>
+	<br>
+
+	<section id="quote">
+
+		<a>On keeping his energy up
+As actors, we have to work for 6-8 months at a stretch, and we become a team in the process. We might not stay in touch with each other after the movie, so we have to have a good time in the amount of time that we are together. Everyone needs to be in good spirits and enjoy what they do
+On choosing scripts
+I look forward to working with more people and learning newer things. The role and the team play a big factor when I choose a new script to work on.
+On being nervous with every new film
+Each time a film starts, it’s a new project that I undertake, and when I am done with it, it feels like I am writing a major exam, so the pressure is always there.</a>
+
+<br>
+	</section>
+
+	<aside id="aside1">
+		<a>IMDB RATING-8/10;</a>
+	</aside>
+
+	<footer>
+		<i>Produced by:  Hombale production </i>
+	</footer>
+    
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
